test/fail/local-redef-of-undefined.app
//#2 must be defined globally to allow local override

application bla

   define page root(){
     define localBody(){}
   }

   define page root1(){
     define localBody(){}
   }